# data-analyst

./: .gitignore  README.md  analyze.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: dashboard_test_sales.csv  sales_sample.csv
src/ai_data_analyst/: __init__.py  __main__.py  charts.py  cli.py  config.py  eda.py  exceptions.py  llm.py  loader.py  report.py  schema.py  web.py  workflow.py
src/ai_data_analyst/templates/: index.html
tests/: test_eda.py  test_llm.py  test_schema.py  test_simple_launcher.py  test_web.py  test_workflow_cli.py
