[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "LLM-assisted CSV EDA and reporting workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.8",
  "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ai-data-analyst = "ai_data_analyst.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
