[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "LLM-assisted CSV EDA and reporting workflow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "matplotlib>=3.8",
  "httpx>=0.25",
  "flask>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
ai-data-analyst = "ai_data_analyst.cli:main"
ai-data-analyst-web = "ai_data_analyst.web:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_data_analyst = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
